--- a/pwa/package.json
+++ b/pwa/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "universal-cookie": "^7.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
