--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,20 +33,22 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
-          cache-dependency-path: pwa/package-lock.json
+          cache-dependency-path: ./pwa/package-lock.json
           node-version: 20
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
+        working-directory: ./pwa
       - name: Build
         run: npm run build
+        working-directory: ./pwa
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload dist folder
-          path: './dist'
+          path: './pwa/dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
