--- a/pwa/package.json
+++ b/pwa/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-qr-code": "^2.0.15",
     "universal-cookie": "^7.2.2"
   },
   "devDependencies": {
